--- a/content/posts/socketio-app-structure.mdx
+++ b/content/posts/socketio-app-structure.mdx
@@ -3,7 +3,7 @@ title: SocketIO - App structure and architecture.
 date: 2020-03-04
 tags: [JS]
 ---
-
+## Introduction
 SocketIO is a JavaScript library that makes the lives of developers so easier when dealing with web socket and socket programming. This is the fact that SocketIO has abstracted out all the low level and tedious steps that are associated with setting up a socket server and client; it has made the question of programmers to be “How can I structure my application.”
 
 Whilst I have done different types of socket implementations, I will walk us through a setup that has always work for me and has proven to be the best in cases that I have had to use SocketIO.
@@ -13,6 +13,8 @@ In this post, we will be implementing a basic SocketIO server, setup a small dat
 It will never be as boring as you think, I promise.
 
 >> I have created a repo for the setup and could be found [here](https://github.com/limistah/socketio-setup).
+
+## Installation & bootstrapping
 
 So, to begin with, I will initialize a new repository for the setup for clarity reasons.
 
@@ -49,7 +51,88 @@ app.get('/', function(req, res){
   res.send('<h1>Socket IO project folder setup</h1>');
 });
 
+io.on('connection', function(socket){
+  console.log('a user connected');
+});
+
 http.listen(3000, function(){
   console.log('listening on *:3000');
 });
+```
+
+And with the above, we have successfully created a basic socketIO server. Hurray!
+
+### Events & Listeners
+
+Events and Listeners are two of the basic concepts that are very related with `SocketIO` library.
+
+#### Listeners
+With `Listeners` the client(s) could tell the server that something should happen in the server. A basic example of a listener is when a user is connected or disconnected:
+
+```js
+// Connection event
+io.on('connection', function(socket){
+  console.log('User with socketId %s connected', socket.id);
+});
+
+// Disconnection event
+io.on('disconnect', function(socket){
+  console.log('User with socketId %s disconnected', socket.id);
+});
+```
+
+Simply put, a listener is a block of code that a client tells the server to run after the server might have _registered_ the `listener` with a name.
+
+To register an listener, we only have to call the `.on` function on the `io` object. The very many ways to call this function is properly documented on the [socketio's website](https://socket.io/docs/#Sending-and-receiving-events).
+
+---
+
+#### Events
+Somethings might happen on the server that it might be so excited to want to tell a client. When we decide that a client should know of something, we are triggering an event.
+
+```js
+socket.emit('hello', 'can you hear me?', 1, 2, 'abc');
+```
+
+We emit on the socket, as it is that socket that needs to know about the event that just happened. Nevertheless, we can emit to any socket or all the sockets or roomspace etc,  an [emit cheatsheet](https://socket.io/docs/emit-cheatsheet/) exists for this purpose.
+
+## Application folder structure
+
+Having understood the basic concepts of Events and Listeners, it is so glaring that we can have all of the listener and events in just a file, say the `src/index.js` file.
+
+Our code could be messed up and look more like this
+```js
+//...
+
+// Listener 1
+io.on('someEventName_1', function (socket) {
+  console.log("someEventName_1 with socketId: %s", socket.id)
+  socket.emit("someEventName_1", {message: "Success"});
+  //...
+})
+
+// Listener 2
+io.on('someEventName_2', function (socket) {
+  console.log("someEventName_2 with socketId: %s", socket.id)
+  socket.emit("someEventName_2", {message: "Success"});
+  //...
+})
+
+// Listener 3
+io.on('someEventName_3', function (socket) {
+  console.log("someEventName_3 with socketId: %s", socket.id)
+  socket.emit("someEventName_3", {message: "Success"});
+  //...
+})
+
+//...
+```
+
+Funny enough, some handlers for some events can get so large. So, what do we do?
+
+This is what we are trying to solve in this post. Firstly, let's create a folder for our events and add an `index.js` file into it.
+
+```bash
+mkdir src/events
+touch ./src/events/index.js
 ```
