--- a/content/posts/make-app-icon.mdx
+++ b/content/posts/make-app-icon.mdx
@@ -1,7 +1,8 @@
 ---
 title: Title of the post
-date: 2019-05-15
-tags: []
+date: 2021-05-24
+tags: [mobile, ios, android, tools]
+description: Easier way to make Android/iOS app icons
 ---
 
 To make Application Icons for both iOS and Android, use https://appicon.co/
