Fix for avatar and images

--- a/content/posts/make-app-icon.mdx
+++ b/content/posts/make-app-icon.mdx
@@ -1,8 +1,8 @@
 ---
-title: Title of the post
+title: How to create Application Icon (Appstore | Playstore)
 date: 2021-05-24
 tags: [mobile, ios, android, tools]
-description: Easier way to make Android/iOS app icons
+description: Easy way to make Android/iOS app icons
 ---
 
 To make Application Icons for both iOS and Android, use https://appicon.co/
