Update to axios post

--- a/content/posts/configure-axios-rollup.mdx
+++ b/content/posts/configure-axios-rollup.mdx
@@ -5,7 +5,7 @@ tags: [rollup, axios, bundlers]
 description: Make axios work with rollup
 ---
 
-1. `npm install `rollup-plugin-node-resolve`.
+1. `npm install rollup-plugin-node-resolve rollup-plugin-json`.
 
 2. Add it to the plugins inside `rollup.config.js`
 
