fix: post update

--- a/content/posts/configure-axios-rollup.mdx
+++ b/content/posts/configure-axios-rollup.mdx
@@ -23,8 +23,6 @@ plugins: [
 
 3. Run your build again: yarn run build
 
-**Voila!**
+_Voila!_
 
----
-
-Source: https://github.com/axios/axios/issues/1259
+[Source](https://github.com/axios/axios/issues/1259)
