--- a/content/posts/configure-axios-rollup.mdx
+++ b/content/posts/configure-axios-rollup.mdx
@@ -25,7 +25,7 @@ plugins: [
 
 ** Notice the `browser: true` **
 
-3. Run your build again: yarn run build
+3. Run your build again: `yarn run build`
 
 _Voila!_
 
