--- a/content/posts/structural-css-selectors.mdx
+++ b/content/posts/structural-css-selectors.mdx
@@ -59,7 +59,7 @@ Reference the list below to understand structural selectors proper:
 - `<selector>:nth-child(n)` - will match any element that is a child of a parent element but occurring at the index of n for that selector
 - `<selector>:nth-last-child(n)` - will match any element that is a child element occurring at the index of n for that selector. Take it as `nth-child moving in reverse mode.
 - `<selector>:empty` - will match any element that is empty or has just comments
-- <selector>:first-of-type - will match any element, and it is the first occurrence for that selector
+- `<selector>:first-of-type` - will match any element, and it is the first occurrence for that selector
 - `<selector>:last-of-type` - will match any element that is the last occurrence for that selector
 - `<selector>:nth-of-type(n)` - will match any element occurring at index of n for that selector
 - `<selector>:nth-last-of-type(n)` - will match the last element for every element occurring at the index of n for that selector. Take it as `nth-type` moving in reverse mode.
