--- a/content/posts/structural-css-selectors.mdx
+++ b/content/posts/structural-css-selectors.mdx
@@ -10,7 +10,12 @@ Yeah, you read that right. Let go straight into it!
 ## A Test Case
 
 Can you interpreter this CSS selector query?
-`p.title:first-of-type { color: red; }`
+
+```css
+p.title:first-of-type {
+  color: red;
+}
+```
 
 Let me think like you would: Select every `P` element that has the class name of title and apply the color red to the first of its type.
 
@@ -43,15 +48,19 @@ What happens with the below:
 
 You would expect the `SPAN` with the class name `span1` should have the color green.
 
-To you, the query reads: _Select the first child of every `P` tag that has a class name of `paragraph-1`, that is not correct!_
+To you, the query reads: _Select the first child of every `P` tag that has a class name of `paragraph-1`,_ that is not correct!
+
 The query correctly reads:
-Select every P tag with a class name of `paragraph-1` and IT IS THE FIRST CHILD of its parent.
+
+> > > Select every P tag with a class name of `paragraph-1` and IT IS THE FIRST CHILD of its parent.
 
 ## Know the Strcuture
 
-To better understand Structural selectors in CSS, we have to consider the query first and then attach the selector's semantic meaning. `:only-child` should read AND IS THE ONLY CHILD, but not seeing it as going deeper to the actual element.
+To better understand Structural selectors in CSS, we have to consider the query first and then attach the selector's semantic meaning.
 
-Structural selectors talk about the position of that element itself.
+`:only-child` should read as **AND IS THE ONLY CHILD**, but not seeing it as going deeper to the actual element's children.
+
+Structural selectors always refer to the position of an element itself in a document.
 
 ```html
 <p>
@@ -62,7 +71,9 @@ Structural selectors talk about the position of that element itself.
 
 For the structure above, `h1:first-child` would pick the first `h1`, `h1:last-child` would select the second `h1`.
 
-The beauty of structural selectors is that page structures are stylable regardless of their complexity. In addition, the only child of an element, empty elements, any element that is a child to an element but existing at an index, and more are stylable, which is powerful!
+The beauty of structural selectors is that page structures are stylable regardless of their complexity.
+
+In addition, the only child of an element, empty elements, any element that is a child to an element but existing at an index, and more are stylable, which is powerful!
 
 ## Ref List
 
