--- a/content/posts/structural-css-selectors.mdx
+++ b/content/posts/structural-css-selectors.mdx
@@ -17,7 +17,9 @@ p.title:first-of-type {
 }
 ```
 
-Let me think like you would: Select every `P` element that has the class name of title and apply the color red to the first of its type.
+Let me think like you would:
+
+> Select every `P` element that has the class name of title and apply the color red to the first of its type.
 
 ```html
 <body>
@@ -52,7 +54,7 @@ To you, the query reads: _Select the first child of every `P` tag that has a cla
 
 The query correctly reads:
 
-> > > Select every P tag with a class name of `paragraph-1` and IT IS THE FIRST CHILD of its parent.
+> Select every P tag with a class name of `paragraph-1` and IT IS THE FIRST CHILD of its parent.
 
 ## Know the Strcuture
 
