--- a/content/posts/structural-css-selectors.mdx
+++ b/content/posts/structural-css-selectors.mdx
@@ -9,7 +9,7 @@ Yeah, you read that right. Let go straight into it!
 
 ## A Test Case
 
-Can you interpreter this CSS selector query?
+Can you interprete this CSS selector query?
 
 ```css
 p.title:first-of-type {
